# euler-rs

./: Cargo.toml  rustfmt.toml
src/: lib.rs
src/1/: main.rs
src/2/: main.rs
src/3/: main.rs  primes.rs
